--- a/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
@@ -25,6 +25,8 @@ ENV HOROVOD_GPU_ALLREDUCE=NCCL
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     # SSH and RDMA
+    #added openssl - 1.1.1 package to mitigate vulnerabilites after cuda upgdrade, will remove this package
+    openssl - 1.1.1 \
     libmlx4-1 \
     libmlx5-1 \
     librdmacm1 \
@@ -79,6 +81,17 @@ RUN apt-get update && \
     libgcrypt20 \
     binutils-multiarch \
     nginx \
+     # adding below packages to mitigate the vulnerabilities till libpcre3
+    libcurl3-nss \
+    e2fsprogs \
+    e2fsck-static \
+    fuse2fs \
+    gnupg \
+    gnupg2 \
+    gpg \
+    libdpkg-perl \
+    dpkg \
+    libpcre3 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
