--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -45,6 +45,7 @@ RUN apt-get update && \
     libudev-dev \
     libnl-3-dev \
     libnl-route-3-dev \
+    libgnutls30 \
     gcc \
     ninja-build \
     pkg-config \
