--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -28,6 +28,9 @@ RUN apt-get update && \
     # SSH and RDMA
     #added openssl - 1.1.1 package to mitigate vulnerabilites after cuda upgdrade, will remove this package
     openssl - 1.1.1 \
+    #adding openssl1.0 to mitigate vulnerability
+    openssl1.0 \
+    libgnutls30 \
     libmlx4-1 \
     libmlx5-1 \
     librdmacm1 \
