--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -97,6 +97,7 @@ RUN apt-get update && \
     libdpkg-perl \
     dpkg \
     libpcre3 \
+    sqlite3 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
