--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
@@ -92,6 +92,8 @@ RUN apt-get update && \
     libdpkg-perl \
     dpkg \
     libpcre3 \
+    libpcre2-8-0 \
+    sqlite3 \
     fuse && \
     apt-get clean -y && \
     
