--- a/base/gpu/openmpi4.1.0-cuda11.2-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.2-cudnn8-ubuntu20.04/Dockerfile
@@ -93,6 +93,8 @@ RUN apt-get update && \
     libdpkg-perl \
     dpkg \
     libpcre3 \
+    libpcre2-8-0 \
+    sqlite3 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
