--- a/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
@@ -94,6 +94,8 @@ RUN apt-get update && \
     dpkg \
     libpcre3 \
     nginx \
+    libpcre2-8-0 \
+    sqlite3 \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
