--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
@@ -96,6 +96,10 @@ RUN apt-get update && \
     sqlite3 \
     fuse && \
     apt-get clean -y && \
+    
+    rm -rf /var/lib/apt/lists/*
+    fuse && \
+    apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
    
         
