--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -109,6 +109,7 @@ RUN apt-get update && \
     dpkg \
     libpcre3 \ 
     sqlite3 \
+    uidmap \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
