--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -98,6 +98,7 @@ RUN apt-get update && \
     dpkg \
     libpcre3 \
     sqlite3 \
+    uidmap \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
@@ -118,11 +119,13 @@ EXPOSE 5001 8883 8888
 
 # pinned versions to mitigate shadow(https://ubuntu.com/security/notices/USN-5254-1) vulnerabilities.
 # Conda Environment
-ENV MINICONDA_VERSION py38_4.11.0
+ENV MINICONDA_VERSION py38_4.12.0
+ENV CONDA_PACKAGE 22.11.1
 ENV PATH /opt/miniconda/bin:$PATH
 RUN wget -qO /tmp/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh && \
     bash /tmp/miniconda.sh -bf -p /opt/miniconda && \
     conda clean -ay && \
+    conda install conda=${CONDA_PACKAGE} -y && \
     rm -rf /opt/miniconda/pkgs && \
     rm /tmp/miniconda.sh && \
     find / -type d -name __pycache__ | xargs rm -rf
