--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -30,7 +30,9 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends &&\
     # Others
     apt-get install -y \
-    git \
+    git && \
+    # nccl-rdma-sharp-plugins dependencies
+    apt-get install -y \
     libnuma-dev \
     libibverbs-dev &&\
     apt-get clean -y && \
