--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -109,6 +109,9 @@ RUN apt-get update && \
     dpkg \
     libpcre3 \ 
     sqlite3 \
+    #adding packages to mitigate vulnerabilities
+    passwd \
+    login \
     uidmap \
     fuse && \
     apt-get clean -y && \
