--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu18.04/Dockerfile
@@ -98,6 +98,10 @@ RUN apt-get update && \
     dpkg \
     libpcre3 \
     sqlite3 \
+    #adding packages to mitigate vulnerabilities
+    passwd \
+    login \
+    libwind0-heimdal \
     uidmap \
     fuse && \
     apt-get clean -y && \
