--- a/base/gpu/openmpi4.1.0-cuda11.2-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.2-cudnn8-ubuntu20.04/Dockerfile
@@ -95,6 +95,10 @@ RUN apt-get update && \
     libpcre3 \
     libpcre2-8-0 \
     sqlite3 \
+    #adding packages to mitigate vulnerabilities
+    passwd \
+    login \
+    libwind0-heimdal \
     uidmap \
     fuse && \
     apt-get clean -y && \
