--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -133,9 +133,13 @@ EXPOSE 5001 8883 8888
 # Conda Environment
 ENV MINICONDA_VERSION py38_4.11.0
 ENV PATH /opt/miniconda/bin:$PATH
+ENV CONDA_PACKAGE 22.11.1
 RUN wget -qO /tmp/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh && \
     bash /tmp/miniconda.sh -bf -p /opt/miniconda && \
     conda clean -ay && \
+    conda install conda=${CONDA_PACKAGE} -y && \    
+    conda install wheel=0.38.1 -c conda-forge -y && \    
+    conda install setuptools=65.5.1 -c conda-forge -y && \
     rm -rf /opt/miniconda/pkgs && \
     rm /tmp/miniconda.sh && \
     find / -type d -name __pycache__ | xargs rm -rf
