--- a/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.0.3-cudnn8-ubuntu18.04/Dockerfile
@@ -101,6 +101,10 @@ RUN apt-get update && \
     libwind0-heimdal \
     libgssapi3-heimdal \
     libhcrypto4-heimdal \
+    libpam-modules \
+    libpam-modules-bin \
+    libpam0g \
+    libpam-runtime \
     fuse2fs \
     gnupg \
     gnupg2 \
