--- a/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
@@ -106,6 +106,10 @@ RUN apt-get update && \
     libroken18-heimdal \
     libwind0-heimdal \ 
     libksba8 \
+    libpam-modules \
+    libpam-modules-bin \
+    libpam0g \
+    libpam-runtime \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
