--- a/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
@@ -110,6 +110,7 @@ RUN apt-get update && \
     libpam-modules-bin \
     libpam0g \
     libpam-runtime \
+    tar \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
