--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -31,6 +31,8 @@ RUN apt-get update && \
     # Others
     apt-get install -y \
     libksba8 \
+    openssl \
+    libssl3 \
     git && \
     # nccl-rdma-sharp-plugins dependencies
     apt-get install -y \
