--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -37,6 +37,10 @@ RUN apt-get update && \
     # nccl-rdma-sharp-plugins dependencies
     apt-get install -y \
     libnuma-dev \
+    libgnutls30 \
+    tar \
+    libsystemd0 \
+    libudev1 \
     libibverbs-dev &&\
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
