--- a/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
@@ -18,6 +18,13 @@ RUN apt-get update && \
     # SSH and RDMA
     openssh-client \
     openssh-server \
+    #Adding packages to mitigate vulnerabilities
+    libssl3 \
+    libtinfo6 \
+    libncurses6 \ 
+    ncurses-bin \
+    ncurses-base \
+    libncursesw6 \
     iproute2 && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
