--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -38,6 +38,7 @@ RUN apt-get update && \
     libnuma-dev \
     libgnutls30 \
     tar \
+    libcap2 \
     libsystemd0 \
     libudev1 \
     ncurses-bin \
