--- a/base/gpu/openmpi4.1.0-cuda11.2-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.2-cudnn8-ubuntu20.04/Dockerfile
@@ -43,6 +43,7 @@ RUN apt-get update && \
     udev \
     libudev-dev \
     libnl-3-dev \
+    libtiff5 \
     libnl-route-3-dev \
     gcc \
     ninja-build \
