--- a/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
@@ -73,6 +73,7 @@ RUN apt-get update && \
     libsm6 \
     libxext6 \
     libssl1.1 \
+    libtiff5 \
     libxrender-dev \
     libglib2.0-0 \
     dh-make \
