--- a/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
@@ -41,6 +41,7 @@ RUN apt-get update && \
     # rdma-core dependencies
     apt-get install -y \
     udev \
+    libtiff5 \
     libudev-dev \
     libnl-3-dev \
     libnl-route-3-dev \
