--- a/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update && \
     libibverbs1 \
     libmthca1 \
     libdapl2 \
+    elfutils \
     dapl2-utils \
     openssh-client \
     openssh-server \
