--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
@@ -31,6 +31,7 @@ RUN apt-get update && \
     librdmacm1 \
     libibverbs1 \
     libmthca1 \
+    elfutils \
     libdapl2 \
     dapl2-utils \
     openssh-client \
