--- a/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
@@ -42,6 +42,7 @@ RUN apt-get update && \
     apt-get install -y \
     udev \
     libtiff5 \
+    elfutils \
     libudev-dev \
     libnl-3-dev \
     libnl-route-3-dev \
