--- a/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
@@ -33,6 +33,7 @@ RUN apt-get update && \
     libmthca1 \
     libdapl2 \
     libtiff5 \
+    elfutils \
     dapl2-utils \
     openssh-client \
     openssh-server \
