--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -42,6 +42,10 @@ RUN apt-get update && \
     libsystemd0 \
     libudev1 \
     ncurses-bin \
+    libc6 \
+    libc-dev-bin \
+    libc6-dev \
+    libc-bin \
     ncurses-base \
     libtinfo6 \
     libbinutils \
