--- a/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
@@ -43,6 +43,8 @@ RUN apt-get update && \
     binutils-multiarch \
     libxml2-dev \ 
     #adding package to mitigate vulnerabilities.
+    procps \
+    libprocps8 \
     e2fsprogs \
     e2fsck-static \
     fuse2fs \
