--- a/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.3-cudnn8-ubuntu20.04/Dockerfile
@@ -26,6 +26,8 @@ RUN apt-get update && \
     # SSH and RDMA
     #added openssl - 1.1.1 package to mitigate vulnerabilites after cuda upgdrade, will remove this package
     openssl - 1.1.1 \
+    procps \
+    libprocps8 \
     libgnutls30 \
     libmlx4-1 \
     libmlx5-1 \
