--- a/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.1-cudnn8-ubuntu20.04/Dockerfile
@@ -110,6 +110,7 @@ RUN apt-get update && \
     libpcre2-8-0 \
     sqlite3 \
     #adding packages to mitigate vulnerabilities
+    libc-bin \
     procps \
     libprocps8 \
     passwd \
