--- a/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     # SSH and RDMA
     #added openssl - 1.1.1 package to mitigate vulnerabilites after cuda upgdrade, will remove this package
+    libc-bin \
     openssl - 1.1.1 \
     procps \
     libprocps8 \
