--- a/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu22.04/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update && \
     # SSH and RDMA
     openssh-client \
     openssh-server \
+    curl \
     #Adding packages to mitigate vulnerabilities
     procps \
     libprocps8 \
@@ -40,7 +41,6 @@ RUN apt-get update && \
     iproute2 && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*  
-    
     
 # Inference
 # Copy logging utilities, nginx and rsyslog configuration files, IOT server binary, etc.
