--- a/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.6-cudnn8-ubuntu20.04/Dockerfile
@@ -24,7 +24,6 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     # SSH and RDMA
     #added openssl - 1.1.1 package to mitigate vulnerabilites after cuda upgdrade, will remove this package
-    libc-bin \
     openssl - 1.1.1 \
     procps \
     libprocps8 \
@@ -62,6 +61,7 @@ RUN apt-get update && \
     bzip2 \
     libbz2-1.0 \
     systemd \
+    curl \
     git \
     wget \
     cpio \
@@ -80,6 +80,7 @@ RUN apt-get update && \
     libxrender-dev \
     libglib2.0-0 \
     dh-make \
+    libc-bin \
     libx11-dev \
     libgcrypt20 \
     binutils-multiarch \
@@ -121,6 +122,12 @@ RUN apt-get update && \
     fuse && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*  
+
+# Update to latest redis       
+RUN apt-get update && apt-get install -y lsb-release && \
+    curl -fsSL https://packages.redis.io/gpg | gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/redis-archive-keyring.gpg] https://packages.redis.io/deb $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/redis.list && \
+    apt-get update && apt-get install -y redis   
     
 # Inference
 # Copy logging utilities, nginx and rsyslog configuration files, IOT server binary, etc.
@@ -172,9 +179,7 @@ RUN mkdir /tmp/openmpi && \
     rm -rf /tmp/openmpi
     	
 # Msodbcsql17 installation
-RUN apt-get update && \
-    apt-get install -y curl && \
-    curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
     curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
     apt-get update && \
     ACCEPT_EULA=Y apt-get install -y msodbcsql17 unixodbc-dev
