--- a/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
+++ b/base/gpu/openmpi4.1.0-cuda11.8-cudnn8-ubuntu22.04/Dockerfile
@@ -36,6 +36,7 @@ RUN apt-get update && \
     git && \
     # nccl-rdma-sharp-plugins dependencies
     apt-get install -y \
+    libsqlite3-0 \
     libnuma-dev \
     procps \
     libprocps8 \
