--- a/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
+++ b/base/cpu/openmpi4.1.0-ubuntu20.04/Dockerfile
@@ -44,6 +44,10 @@ RUN apt-get update && \
     binutils-multiarch \
     libxml2-dev \ 
     #adding package to mitigate vulnerabilities.
+    libpam-runtime \
+    libpam0g \
+    libpam-modules \
+    libpam-modules-bin \
     procps \
     libprocps8 \
     e2fsprogs \
